@@ -1,5 +1,8 @@
 [b]Version 0.5.63 (not released yet)[/b]:
 
+(2007-12-24)
+ * (Windows) Preferences->Drives shows only cdrom devices.
+
 (2007-12-22)
  * (Windows) Now idx/sub subtitles should work also when using short names.
    So I think this stuff is finished.
